# caprakurs-ai-chatbot

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/: worker.js
frontend/src/: App.css  App.tsx
