[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vemund Santi <vesa@capraconsulting.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.3"}
sentence-transformers = "^3.2.1"
torch = "^2.5.0"
transformers = "^4.46.0"
mistral-inference = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
